2003-03-13  Per Bothner  <per@bothner.com>

	* TreeList.java (consumeIRange):  Fix typo in BASE_URI handling.

2003-03-02  Per Bothner  <per@bothner.com>

	* AbstractSequence.java.in (getPosPrevious):  Make public.
	* SubSequence.java (getPosPrevious):  Likewise.
	* TreeList.java (getPosPrevious):  Likewise.

2003-02-19  Per Bothner  <per@bothner.com>

	* TreeList.java (oindex):  Field moved here from ValuesStack.
	(availOject):  Removed field
	(find(Object), find(Object,Object)):  Methods moved here
	from ValuesStack.  This fixes quadratic behavior, at the cost of
	not sharing duplicate indexes.

2003-02-13  Per Bothner  <per@bothner.com>

	* AbstractSequence.java.in (parentPos, baseUriOfPos):  New methods.
	* TreeList.java (BASE_URI):  New constant.
	(writeBaseUri):  New method, to add base-uri property.
	(baseUriOfPos):  New method.
	(gotoChildrenStart):  Skip BASE_URI for documents and groups.
	(consumeIRange, dump):  Handle BASE_URI.
	(toString, stringValue, nextNodeIndex, nextMatchingChild):
	Skip BASE_URI.
	(parentPos):  New method.

	* TreeList.java (curerntBeginGroup):  Re-named to currentParent.
	(beginDocument, endDocument):  Set and clear currentParent.

2003-01-05  Per Bothner  <per@bothner.com>

	Replace position triples (including xpos), with positions pairs,
	using just an 'int' "Pos" cookie to identify a position.
	* PositionContainer.java:  Remove no-longer-useful interface.
	* AbstractSequence.java.in (fillPosRange):  New method.
	(fill):  Re-write to use nextPos+setPosPrevious.
	(elements, iterator):  Use getIterator and make final.
	(getIterator):  Default implementation uses startPos.
	(indexOf, removeAll, retailAll, toArray, hashCode):  Re-implement using
	startPos+nextPos+getPosPrevious.
	(contains):  Re-implement to just call indexOf.
	(containsAll):  Fix bug.
	(listIterator):  Use new SeqPosition constructor.
	(add, releasePosition, copyPosition, gotoNext, gotoPrevious):
	Remove methods taking a PositionContainer.
	(addPos):  New method.